Commiting Merge of changes made in semester and ver 2.5M

--- a/test/Makefile
+++ b/test/Makefile
@@ -21,6 +21,7 @@
 .PHONY: typequals ud ulstypes union unreachable unused 
 .PHONY: db1 db2 db3 tests2.2 tests2.2a tests2.4
 .PHONY: all test fulltest expects quicktest
+.PHONY: nullterminatedtest
 
 .SUFFIXES: .out .expect .c .lcl .h .lh .diff
 
@@ -35,7 +36,7 @@ LCLINTP = $(LCLINT)
 LCLINTRN = $(LCLINTP) -nof -hints -booltype "bool"
 LCLINTR = $(LCLINTRN) -exportlocal
 
-UNITTESTS = help abstptr abstract alias alttypes ansireserved argorder args blocks break cases cast charlit clauses commentchar compdestroy controldepth csyntax czechnames czechoslovaknames decl enum exports external fields flags funcpointer glob globals impabstract init inparam internal iter keep libs lintcomments list macros macrosef merge modifies modtest moduncon mongoincludes null observer oldstyle outglob outparam preds prefixes printflike rc refcounts release repexpose sharing slovaknames specclauses special stack staticarray strings structassign typequals ud ulstypes union unreachable unused tests2.2 tests2.2a tests2.4
+UNITTESTS = help abstptr abstract alias alttypes ansireserved argorder args blocks break cases cast charlit clauses commentchar compdestroy controldepth csyntax czechnames czechoslovaknames decl enum exports external fields flags funcpointer glob globals impabstract init inparam internal iter keep libs lintcomments list macros macrosef merge modifies modtest moduncon mongoincludes null observer oldstyle outglob outparam preds prefixes printflike rc refcounts release repexpose sharing slovaknames specclauses special stack staticarray strings structassign typequals ud ulstypes union unreachable unused tests2.2 tests2.2a tests2.4 nullterminatedtest
 
 UNITEXPECTS  = $(addsuffix .expect, $(UNITTESTS))
 
@@ -574,6 +575,11 @@ tests2.4:
 	$(LCLINTR) driverstub.c ; \
 	$(LCLINTR) alignof.c -expect 2 ; \
 	$(LCLINTR) -D DBL_MANT_DIG=25 source.c
+
+nullterminatedtest:
+	@cd nullterminatedtest; \
+	$(LCLINTR) test1.c; \
+	$(LCLINTR) test2.c
 
 ###
 ### Integration Tests
