--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -26,7 +26,10 @@ GRAMSRC    = cgrammar.c cscanner.c
 GENERALSRC = cstring.c fileloc.c message.c source.c \
     fileTable.c hashTable.c llerror.c messageLog.c \
     flagMarker.c aliasTable.c ynm.c sRefTable.c \
-    ekind.c usymtab.c multiVal.c lltok.c sRef.c lcllib.c 
+    ekind.c usymtab.c multiVal.c lltok.c sRef.c lcllib.c \
+    environmentTable.c \
+    constraintList.c \
+    exprData.c
 
 ###
 ### These source files are relevant for LCL only.
