--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -25,10 +25,12 @@ GRAMSRC    = cgrammar.c cscanner.c
 
 GENERALSRC = cstring.c fileloc.c message.c source.c \
     fileTable.c hashTable.c llerror.c messageLog.c \
-    flagMarker.c aliasTable.c ynm.c sRefTable.c \
-    ekind.c usymtab.c multiVal.c lltok.c sRef.c lcllib.c \
+    constraint.c \
     environmentTable.c \
     constraintList.c \
+    constraintGeneration.c \
+    flagMarker.c aliasTable.c ynm.c sRefTable.c \
+    ekind.c usymtab.c multiVal.c lltok.c sRef.c lcllib.c \
     exprData.c
 
 ###
