--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -26,6 +26,8 @@ GRAMSRC    = cgrammar.c cscanner.c
 GENERALSRC = cstring.c fileloc.c message.c source.c \
     fileTable.c hashTable.c llerror.c messageLog.c \
     constraint.c \
+    constraintTerm.c \
+    constraintResolve.c \
     environmentTable.c \
     constraintList.c \
     constraintGeneration.c \
