Converted to new API for constraintExpr g++; g++; is now handled correctly.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -27,6 +27,8 @@ GENERALSRC = cstring.c fileloc.c message.c source.c \
     fileTable.c hashTable.c llerror.c messageLog.c \
     constraint.c \
     constraintTerm.c \
+    constraintExpr.c \
+    constraintExprData.c \
     constraintResolve.c \
     environmentTable.c \
     constraintList.c \
