We're now able to generate Maxset constraints for fixed sized arrays. e.g. int x[3]; produces maxset(x) >= 2;

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -30,6 +30,7 @@ GENERALSRC = cstring.c fileloc.c message.c source.c \
     constraintExpr.c \
     constraintExprData.c \
     constraintResolve.c \
+    constraintOutput.c \
     environmentTable.c \
     constraintList.c \
     constraintGeneration.c \
