copy lib from lcclint-2.5q version.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,10 +1,8 @@
-LCLINT = ../bin/lclint
-
 all:
-	${LCLINT} -nolib +impconj ansi.h -dump ansi 
-	${LCLINT} -nolib +impconj -DSTRICT ansi.h -dump ansistrict
-	${LCLINT} -nolib +impconj ansi.h posix.h -dump posix
-	${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
-	${LCLINT} -nolib +impconj ansi.h posix.h unix.h -dump unix
-	${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
+	lclint -nolib +impconj ansi.h -dump ansi 
+	lclint -nolib +impconj -DSTRICT ansi.h -dump ansistrict
+	lclint -nolib +impconj ansi.h posix.h -dump posix
+	lclint -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
+	lclint -nolib +impconj ansi.h posix.h unix.h -dump unix
+	lclint -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
 
