--- a/test/Makefile
+++ b/test/Makefile
@@ -21,7 +21,7 @@
 .PHONY: typequals ud ulstypes union unreachable unused 
 .PHONY: db1 db2 db3 tests2.2 tests2.2a tests2.4 tests2.5
 .PHONY: all test fulltest expects quicktest
-.PHONY: nullterminatedtest
+.PHONY: sizeoftest
 
 .SUFFIXES: .out .expect .c .lcl .h .lh .diff
 
@@ -36,7 +36,9 @@ LCLINTP = $(LCLINT)
 LCLINTRN = $(LCLINTP) -nof -hints -booltype "bool"
 LCLINTR = $(LCLINTRN) -exportlocal
 
-UNITTESTS = help abstptr abstract alias alttypes ansireserved argorder args blocks break cases cast charlit clauses commentchar compdestroy controldepth csyntax czechnames czechoslovaknames decl enum exports external fields flags funcpointer glob globals impabstract init inparam internal iter keep libs lintcomments list macros macrosef merge modifies modtest moduncon mongoincludes null nullterminatedtest observer oldstyle outglob outparam preds prefixes printflike rc refcounts release repexpose sharing slovaknames specclauses special stack staticarray strings structassign typequals ud ulstypes union unreachable unused tests2.2 tests2.2a tests2.4 tests2.5
+UNITTESTS = help abstptr abstract alias alttypes ansireserved argorder args blocks break cases cast charlit clauses commentchar compdestroy controldepth csyntax czechnames czechoslovaknames decl enum exports external fields flags funcpointer glob globals impabstract init inparam internal iter keep libs lintcomments list macros macrosef merge modifies modtest moduncon mongoincludes null sizeoftest bufferTest observer oldstyle outglob outparam preds prefixes printflike rc refcounts release repexpose sharing slovaknames specclauses special stack staticarray strings structassign typequals ud ulstypes union unreachable unused tests2.2 tests2.2a tests2.4 tests2.5
+
+#UNITTEST = bufferTest
 
 UNITEXPECTS  = $(addsuffix .expect, $(UNITTESTS))
 
@@ -579,10 +581,9 @@ tests2.4:
 	$(LCLINTR) alignof.c -expect 2 ; \
 	$(LCLINTR) -D DBL_MANT_DIG=25 source.c
 
-nullterminatedtest:
-	@cd nullterminatedtest; \
-	$(LCLINTR) test1.c; \
-	$(LCLINTR) test2.c
+sizeoftest:
+	@cd sizeoftest; \
+	$(LCLINTR) +functionconstraint sizeof.c
 
 tests2.5:
 	setenv LCLINT '$(LCLINTRN)'; cd tests2.5 ; $(MAKE) -e
