Lots of changes.  Code is mostly annotated.  Still lots of breaken stuff though. Freeing memory has caused some crashes.  I'm still running LCLint to track down problem. More memory also needs to be freed.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -23,13 +23,13 @@ LCLINTSRC = exprNode.c exprChecks.c llmain.c
 GRAMS      = cgrammar.y cscanner.l llgrammar.y signature.y
 GRAMSRC    = cgrammar.c cscanner.c 
 
-GENERALSRC =     constraint.c \
-    constraintTerm.c \
+GENERALSRC =    constraintTerm.c \
     constraintExprData.c \
     constraintExpr.c \
+    constraint.c \
     constraintList.c \
-    constraintGeneration.c \
     constraintResolve.c \
+    constraintGeneration.c \
     constraintOutput.c \
     forjunk.c \
     cstring.c fileloc.c message.c source.c \
